SSO-123 - fix